fix: aui-table sticky-column side border disappear, dialog overflow hidden, scroll-shadow extend cdkscroll , table expand row width fix (#372)

--- a/src/table/table.component.scss
+++ b/src/table/table.component.scss
@@ -124,6 +124,7 @@
       overflow: hidden;
 
       .aui-table__cell-expand-panel {
+        width: 100%;
         border-radius: use-var(border-radius-l);
         overflow: hidden;
 
